# DoodleJump

./: BasicPlatform.cpp  BasicPlatform.h  Bomb.cpp  Bomb.h  Bonus.cpp  Bonus.h  BreakingPlatform.cpp  BreakingPlatform.h  Bullet.cpp  Bullet.h  CMakeLists.txt  DisappearingPlatform.cpp  DisappearingPlatform.h  DoodleJump.pro  ExplodingPlatform.cpp  ExplodingPlatform.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Hurts.cpp  Hurts.h  Jetpack.cpp  Jetpack.h  Monster.cpp  Monster.h  Moving.cpp  Moving.h  MovingPlatform.cpp  MovingPlatform.h  MovingPlatorm.cpp  MovingPlatorm.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Resources.cpp  Resources.h  Spring.cpp  Spring.h  (+7 more)
Headers/: Bonus.h  BreakingPlatform.h  DisappearingPlatform.h  ExplodingPlatform.h  Moving.h  Platform.h
Sources/: BreakingPlatform.cpp  ExplodingPlatform.cpp  Hurts.cpp  Moving.cpp
doc/html/: _basic_platform_8h_source.html  _bonus_8h_source.html  _breaking_platform_8h_source.html  _bullet_8h_source.html  _disappearing_platform_8h_source.html  _exploding_platform_8h_source.html  _game_8h_source.html  _game_object_8h_source.html  _hurts_8h_source.html  _jetpack_8h_source.html  _monster_8h_source.html  _moving_8h_source.html  _moving_platform_8h_source.html  _platform_8h_source.html  _player_8h_source.html  _resources_8h_source.html  _spring_8h_source.html  annotated.html  class_basic_platform-members.html  class_basic_platform.html  class_bonus-members.html  class_bonus.html  class_breaking_platform-members.html  class_breaking_platform.html  class_bullet-members.html  class_bullet.html  class_coin-members.html  class_coin.html  class_disappearing_platform-members.html  class_disappearing_platform.html  class_exploding_platform-members.html  class_exploding_platform.html  class_game-members.html  class_game.html  class_game_object-members.html  class_game_object.html  class_hurts.html  (+32 more)
lib/: highscores.txt  readme.md
src/: BasicPlatform.h  Bomb.cpp  Bomb.h  Bonus.cpp  DisappearingPlatform.h  ExplodingPlatform.cpp  GameObject.cpp  Monster.cpp  Monster.h  MovingPlatorm.cpp  Platform.cpp  Player.cpp
(+191 files in other folders)
